# QCA9531

./: .config  AC100-AC200  AC200-AC100  AC200-AH100  AC200-AP100  AH100-AP200  AP100-AH100  AP200-AC100  ap147.patch  gujian  qca  xx
feeds/: wlan_10_4
feeds/luci.tmp/: .packageinfo
feeds/luci.tmp/info/: .packageinfo-applications_luci-app-ahcp  .packageinfo-applications_luci-app-asterisk  .packageinfo-applications_luci-app-commands  .packageinfo-applications_luci-app-coovachilli  .packageinfo-applications_luci-app-ddns  .packageinfo-applications_luci-app-diag-core  .packageinfo-applications_luci-app-diag-devinfo  .packageinfo-applications_luci-app-firewall  .packageinfo-applications_luci-app-freifunk-policyrouting  .packageinfo-applications_luci-app-hd-idle  .packageinfo-applications_luci-app-meshwizard  .packageinfo-applications_luci-app-minidlna  .packageinfo-applications_luci-app-mmc-over-gpio  .packageinfo-applications_luci-app-multiwan  .packageinfo-applications_luci-app-ntpc  .packageinfo-applications_luci-app-olsr  .packageinfo-applications_luci-app-openvpn  .packageinfo-applications_luci-app-p2pblock  (+21 more)
feeds/management/: freecwmp
feeds/management/freecwmp/src/: CMakeLists.txt  README
feeds/management/freecwmp/src/ext/openwrt/config/: .gitignore  freecwmp  freecwmp-contr.lua
feeds/management/freecwmp/src/ext/openwrt/scripts/: freecwmp.sh  wdfreecwmpd.sh
feeds/management/freecwmp/src/ext/openwrt/scripts/functions/: common  device_info  get_wireless_info  inform  lan_device  urlfilter  wificlient.lua
feeds/management/freecwmp/src/ext/tmp/: .gitignore
feeds/management/freecwmp/src/src/: b64.c  b64.h  config.c  config.h  cwmp.c  cwmp.h  external.c  external.h  freecwmp.c  freecwmp.h  http.c  http.h  messages.h  ubus.c  xml.c  xml.h
feeds/packages.tmp/: .packageinfo
feeds/routing.tmp/: .packageinfo
package/: pifii
prebuilt/ar71xx/: qca-hyd_g3df1bba-1_ar71xx.ipk
scripts/: localmirrors
sh/: a  ap147  mianban-2g  mianban-5g  mianban-5g.bak  shiwai-2g  shiwai-5g  test  v10  xiding-2g  xiding-5g  xx  zhou  zhou-danpin  zhou.bak
sh/config/: 2g-shiwai  2g-xiding  5g-mianban  5g-xiding  network  qcawifi.sh  qcawifi.sh.21.bak  qcawifi.sh.23.bak  qcawifi.sh.30  qcawifi.sh.30.bak  wireless-danpin
sh/router/: mianban-5g  network  qcawifi.sh.21  qcawifi.sh.23  qcawifi.sh.30  shiwai-5g  xiding-5g
(+677 files in other folders)
